welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:6: error: illegal start of simple expression
		if (compteur==a)) {
                                ^